Basic product page

--- a/main/index.html
+++ b/main/index.html
@@ -21,7 +21,7 @@
 
     <header class="header">
         <h1 class="logo">
-            <a href="index.html"><img src="/assets/images/oz_music_logo.png" alt=""></a>
+            <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
         </h1>
         <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
@@ -37,8 +37,6 @@
             <span></span>
         </label>
     </header>
-
-
 
     <section class="home-hero">
         <div class="container">
@@ -56,14 +54,13 @@
         </div>
     </section>
 
-    <section class="portfolio">
-        
+    <section class="featured-albums">
         <h1>Featured Albums</h1>
 
         <!-- Album 1 -->
-        <figure class="port-item">
+        <figure class="featured-item">
             <img src="/assets/images/mt_mountain_tassels.jpg" alt="">
-            <figcaption class="port-desc">
+            <figcaption class="album-desc">
                 <p>Album 1</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
@@ -71,114 +68,127 @@
 
 
         <!-- Album 2 -->
-        <figure class="port-item">
+        <figure class="featured-item">
             <img src="/assets/images/lausse-the-cat.jpg" alt="">
-            <figcaption class="port-desc">
+            <figcaption class="album-desc">
                 <p>Album 2</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
 
 
-
         <!-- Album 3 -->
-        <figure class="port-item">
+        <figure class="featured-item">
             <img src="/assets/images/self_harm.jpg" alt="">
-            <figcaption class="port-desc">
+            <figcaption class="album-desc">
                 <p>Album 3</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
 
 
-
         <!-- Album 4 -->
-        <figure class="port-item">
+        <figure class="featured-item">
             <img src="/assets/images/doom.jpg" alt="">
-            <figcaption class="port-desc">
+            <figcaption class="album-desc">
                 <p>Album 4</p>
                 <a href="indv-prod-pg" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
 
 
-
         <!-- Album 5 -->
-        <figure class="port-item">
-            <img src="/assets/images/cowboy-bebop-ost.jpg" alt="">
-            <figcaption class="port-desc">
+        <figure class="featured-item">
+            <img src="/assets/images/saint_cs_kreme.jpg" alt="">
+            <figcaption class="album-desc">
                 <p>Album 5</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
 
 
-
         <!-- Album 6 -->
-        <figure class="port-item">
+        <figure class="featured-item">
             <img src="/assets/images/crywank.jpg" alt="">
-            <figcaption class="port-desc">
+            <figcaption class="album-desc">
                 <p>Album 6</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
+    </section>
 
-
+    <section class="cta">
+        <div class="container">
+            <h1 class="title title-cta">New Releases
+                <span>Placeholder</span>
+            </h1>
+            <a href="indv-prod-pg.html" class="btn-cta-dark">Newest Releases</a>
+        </div>
     </section>
 
     <footer>
-        <div class="span-3">
-            <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We offer
-                a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's. Genres include: Rock
-                . Pop . Soul . Funk . Dance . Alternative . Indie . Metal . Punk . Psych . Progressive . Jazz . Beat .
-                Power Pop . Audiophile . Blues . Folk . Reggae . Garage . Country & Western . Classical . World .
-                Soundtracks.
-                Our music memorabilia section includes sheet music, tour programs, concert tickets, posters, books,
-                magazines, and promotional items.
-            </p>
-            <p>We have a large network of contacts and sources of supply, plus many unlisted items. So if you don't find
+        <div class="container">
+            <div class="col-3">
+                <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We
+                    offer
+                    a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's.
+                     <!-- Genres include:
+                    Rock
+                    - Pop - Soul - Funk - Dance - Alternative - Indie - Metal - Punk - Psych - Progressive - Jazz - Beat
+                    -
+                    Power Pop - Audiophile - Blues - Folk - Reggae - Garage - Country & Western - Classical - World -
+                    Soundtracks.
+                    Our music memorabilia section includes sheet music, tour programs, concert tickets, posters, books,
+                    magazines, and promotional items. -->
+                </p>
+                <!-- <p>We have a large network of contacts and sources of supply, plus many unlisted items. So if you don't find
                 it here, please Send your Want List
                 <strong> BUY QUALITY RECORD COLLECTIONS.</strong> Please Contact us
                 We hope that you will enjoy your visit to our site and that you will return regularly to view our ever
-                changing stock. Thank you.
+                changing stock. Thank you. -->
+                <a class="#" href="#"><img class="social-icon" src="/assets/icons/icons8-facebook-24.png" alt=""></a>
+                <a href="#"><img class="social-icon" src="/assets/icons/icons8-instagram-24.png" alt=""></a>
+                <a href="#"><img class="social-icon" src="/assets/icons/icons8-twitter-24.png" alt=""></a>
+                <a href="#"><img class="social-icon" src="/assets/icons/icons8-mail-30.png" alt=""></a>
+
             </p>
-        </div>
+            </div>
 
 
-        <div class="col-1">
-            <ul class="unstyled-list">
-                <li><strong>Specials</strong></li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-            </ul>
-        </div>
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>About Us</strong></li>
+                    <li>Our Blog</li>
+                    <li>Contact Us</li>
+                    <li>Placeholder</li>
+                    <li>Placeholder</li>
+                </ul>
+            </div>
 
 
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>Information</strong></li>
+                    <li>Delivery Policy</li>
+                    <li>Pickup from our Store</li>
+                    <li>Returns and Cancellation Policy</li>
+                    <li>Terms of Use</li>
+                </ul>
+            </div>
 
-        <div class="col-1">
-            <ul class="unstyled-list">
-                <li><strong>About Us</strong></li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-            </ul>
-        </div>
-
-        <div class="col-1">
-            <ul class="unstyled-list">
-                <li><strong>Shipping and Returns</strong></li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-                <li>Placeholder</li>
-            </ul>
-        </div>
-
+            <div class="col-1">
+                <ul class="unstyled-list">
+                    <li><strong>Contact Us</strong></li>
+                    <li>OZ Music Collectables PO BOX 153
+                        Castle Hill NSW 2154</li>
+                    <li>Phone : (+612) 9634 6741</li>
+                    <li>Email : ozmus@bigpond.net.au</li>
+                    <li>Placeholder</li>
+                </ul>
+            </div>
+            </div>
     </footer>
-
+    
 
 
     <!-- <footer class="main-footer">
@@ -193,7 +203,7 @@
             <a href="index.html">
                 <img src="/assets/images/oz_music_logo.png" alt=""></a>
         </div>
-    </footer> --> -->
+    </footer>  -->
 
 
 </body>
