--- a/main/search-page.html
+++ b/main/search-page.html
@@ -10,9 +10,30 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Search Page</title>
     <link rel="stylesheet" href="../css/reset.css">
-    <link rel="stylesheet" href="../css/style.css">
+    <!-- <link rel="stylesheet" href="../css/style.css"> -->
+    <link rel="stylesheet" href="../css/style-copy-test.css">
 
 </head>
+
+<header class="header">
+    <h1 class="logo">
+        <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+    </h1>
+    <input type="checkbox" id="nav-toggle" class="nav-toggle">
+
+    <nav class="nav">
+        <ul>
+            <li><a href="">Home</a></li>
+            <li><a href="">About</a></li>
+            <li><a href="">Blog</a></li>
+            <li><a href="">Contact</a></li>
+
+        </ul>
+    </nav>
+    <label for="nav-toggle" class="nav-toggle-label">
+        <span></span>
+    </label>
+</header>
 
 <body>
 
@@ -28,15 +49,6 @@
                 <li><a href="">About</a></li>
                 <li><a href="">Blog</a></li>
                 <li><a href="">Contact</a></li>
-
-
-                <li><a class="social-link" href="#"><img class="social-icon"
-                            src="/assets/icons/Facebook_icon_2013.svg.png" alt=""></a></li>
-                <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/icons8-instagram-24.png" alt=""></a></li>
-                <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/logo-youtube.svg" alt=""></a></li>
-
-
-
 
             </ul>
         </nav>
@@ -108,7 +120,7 @@
                 <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We
                     offer
                     a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's.
-                     <!-- Genres include:
+                    <!-- Genres include:
                     Rock
                     - Pop - Soul - Funk - Dance - Alternative - Indie - Metal - Punk - Psych - Progressive - Jazz - Beat
                     -
@@ -122,13 +134,8 @@
                 <strong> BUY QUALITY RECORD COLLECTIONS.</strong> Please Contact us
                 We hope that you will enjoy your visit to our site and that you will return regularly to view our ever
                 changing stock. Thank you. -->
-                <a class="#" href="#"><img class="" src="/assets/icons/icons8-facebook-24.png" alt=""></a>
-                <a href="#"><img src="/assets/icons/icons8-instagram-24.png" alt=""></a>
-                <a href="#"><img src="/assets/icons/icons8-twitter-24.png" alt=""></a>
-                <a href="#"><img src="/assets/icons/icons8-mail-30.png" alt=""></a>
-
-
-            </p>
+              
+                </p>
             </div>
 
 
@@ -163,10 +170,8 @@
                     <li>Placeholder</li>
                 </ul>
             </div>
-            </div>
+        </div>
     </footer>
-
-
 
 </body>
 
