adjustments to homepage

--- a/main/index.html
+++ b/main/index.html
@@ -39,20 +39,21 @@
     </header>
 
     <section class="home-hero">
-        <div class="container">
+        <div class="aotw-container">
             <h1 class="title">Album of the Week
-                <span>Aphelion EP</span>
             </h1>
+        </div> 
+        <div class="view-album-btn-container">
             <a href="indv-prod-pg.html" class="btn-hero btn-hero-accent">View Album</a>
-        </div>
+        </div> 
     </section>
 
-    <section class="home-about">
+    <!-- <section class="home-about">
         <div class='home-about-textbox'>
             <h1>Vinyl LP Records</h1>
             <p>New and Used CD's, Vinyl Records and Music Memorabilia</p>
         </div>
-    </section>
+    </section> -->
 
     <section class="featured-albums">
         <h1>Featured Albums</h1>
@@ -61,7 +62,8 @@
         <figure class="featured-item">
             <img src="/assets/images/mt_mountain_tassels.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 1</p>
+                <h1>Tassels</h1>
+                <p> by Mt Mountain</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
@@ -71,7 +73,8 @@
         <figure class="featured-item">
             <img src="/assets/images/lausse-the-cat.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 2</p>
+                <h1>The Girl the Cat and The Tree</h1>
+                <p> by Lausse the Cat</p>
                 <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
             </figcaption>
         </figure>
@@ -81,8 +84,9 @@
         <figure class="featured-item">
             <img src="/assets/images/self_harm.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 3</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+                <h1>ADAPT TO SELF-INFLICTED CHEMICAL TORTURE</h1>
+                <p> by SELF HARM</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
             </figcaption>
         </figure>
 
@@ -91,8 +95,9 @@
         <figure class="featured-item">
             <img src="/assets/images/doom.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 4</p>
-                <a href="indv-prod-pg" class="button button-accent button-small">Link</a>
+                <h1>Born Like This</h1>
+                <p> by DOOM</p>
+                <a href="indv-prod-pg" class="button button-accent button-small">View</a>
             </figcaption>
         </figure>
 
@@ -101,8 +106,9 @@
         <figure class="featured-item">
             <img src="/assets/images/saint_cs_kreme.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 5</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+                <h1>Snoopy</h1>
+                <p>by CS & Kreme</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
             </figcaption>
         </figure>
 
@@ -111,20 +117,21 @@
         <figure class="featured-item">
             <img src="/assets/images/crywank.jpg" alt="">
             <figcaption class="album-desc">
-                <p>Album 6</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+                <h1>James is Going to Die soon </h1>
+                <p>by Crywank</p>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
             </figcaption>
         </figure>
     </section>
 
-    <section class="cta">
+    <!-- <section class="cta">
         <div class="container">
             <h1 class="title title-cta">New Releases
                 <span>Placeholder</span>
             </h1>
             <a href="indv-prod-pg.html" class="btn-cta-dark">Newest Releases</a>
         </div>
-    </section>
+    </section> -->
 
     <footer>
         <div class="container">
@@ -189,22 +196,6 @@
             </div>
     </footer>
     
-
-
-    <!-- <footer class="main-footer">
-        <div class="container main-footer-container">
-            <ul class="nav footer-nav">
-                <div>
-                    <li>About Us</li>
-                    <li>Information</li>
-                    <li>Contact Us</li>
-                </div>
-            </ul>
-            <a href="index.html">
-                <img src="/assets/images/oz_music_logo.png" alt=""></a>
-        </div>
-    </footer>  -->
-
 
 </body>
 
