--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -16,11 +16,24 @@
 
 <body>
 
-    <div class="header-main">
-        <div><a class="logo" href="index.html">
-                <img src="https://www.ozmusiconline.com.au/images/oz_music_logo.png" alt=""></a></div>
-    </div>
+    <header class="header">
+        <h1 class="logo">
+            <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+        </h1>
+        <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
+        <nav class="nav">
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Blog</a></li>
+                <li><a href="">Contact</a></li>
+            </ul>
+        </nav>
+        <label for="nav-toggle" class="nav-toggle-label">
+            <span></span>
+        </label>
+    </header>
 
     <section class="container content-section">
         <div class="shop-items">
