--- a/main/SS_search-page.html
+++ b/main/SS_search-page.html
@@ -11,7 +11,7 @@
     <title>Search Page</title>
     <link rel="stylesheet" href="../css/reset.css">
     <!-- <link rel="stylesheet" href="../css/style.css"> -->
-    <link rel="stylesheet" href="../css/style-copy-test.css">
+    <link rel="stylesheet" href="../css/style.css">
 
 </head>
 
