--- a/main/index.html
+++ b/main/index.html
@@ -29,7 +29,7 @@
             <ul>
                 <li><a href="">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="search-page.html">Shop</a></li>
                 <li><a href="">Contact</a></li>
             </ul>
         </nav>
@@ -134,7 +134,7 @@
     </section> -->
 
     <footer>
-        <div class="container">
+        <div class="footer-container">
             <div class="col-3">
                 <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We
                     offer
