--- a/main/search-page.html
+++ b/main/search-page.html
@@ -21,9 +21,9 @@
 
         <nav class="nav">
             <ul>
-                <li><a href="">Home</a></li>
+                <li><a href="/main/index.html">Home</a></li>
                 <li><a href="">About</a></li>
-                <li><a href="">Blog</a></li>
+                <li><a href="/main/search-page.html">Shop</a></li>
                 <li><a href="">Contact</a></li>
 
             </ul>
@@ -38,14 +38,14 @@
         <div class="product-grid">
 
             <div class="card stacked featured">
-                <img src="/assets/images/lausse-the-cat.jpg" alt="Lausse The Cat" class="card__img">
+                <img src="/assets/images/velvet_morning_gorilla.jpg" alt="Velvet Morning" class="card__img">
                 <div class="card__content">
-                    <h2 class="card__title">Lausse The Cat: The Girl The Cat and The Tree</h2>
+                    <h2 class="card__title">Velvet Morning: Gorilla</h2>
                     <p class="card__price">$29.00</p>
                     <p class="card__description"></p>
                 </div>
             </div>
-
+            
 
             <div class="card stacked">
                 <img src="/assets/images/mt_mountain_tassels.jpg" alt="Mt Mountain" class="card__img">
@@ -57,7 +57,7 @@
             </div>
 
             <div class="card stacked">
-                <img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="Ross from Friends" class="card__img">
+                <a href="/main/indv-prod-pg.html"><img src="/assets/images/ross-from-friends-aphelion-ep.jpg" alt="Ross from Friends" class="card__img" ></a>
                 <div class="card__content">
                     <h2 class="card__title">Ross From Friends: Aphelion EP</h2>
                     <p class="card__price">$39.99</p>
@@ -67,9 +67,9 @@
 
 
             <div class="card stacked">
-                <img src="/assets/images/velvet_morning_gorilla.jpg" alt="Velvet Morning" class="card__img">
+                <img src="/assets/images/lausse-the-cat.jpg" alt="Lausse that Cat" class="card__img">
                 <div class="card__content">
-                    <h2 class="card__title">Velvet Morning: Gorilla</h2>
+                    <h2 class="card__title"></h2>
                     <p class="card__price">$39.99</p>
                     <p class="card__description"></p>
                 </div>
