--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -22,10 +22,11 @@
 
     <nav class="nav">
         <ul>
-            <li><a href="">Home</a></li>
+            <li><a href="/main/index.html">Home</a></li>
             <li><a href="">About</a></li>
-            <li><a href="">Blog</a></li>
+            <li><a href="/main/search-page.html">Shop</a></li>
             <li><a href="">Contact</a></li>
+            <li><a href=""><ion-icon name="cart-outline"></ion-icon></a></li>
         </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
@@ -165,7 +166,8 @@
 
     </script>
 
-
+<script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
+<script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
 </body>
 
