--- a/main/test.html
+++ b/main/test.html
@@ -2,42 +2,144 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-    <link rel="stylesheet" href="/css/style-copy-test.css">
-
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Document</title>
+  <link rel="stylesheet" href="/css/test.css">
+  <script src="/js/script.js" defer></script>
 </head>
 
 <body>
-
-    <!-- <ion-icon name="boat-outline"></ion-icon>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-icon name="battery-charging-outline"></ion-icon>
-    <ion-icon name="logo-facebook"></ion-icon>
-    <ion-icon name="logo-reddit"></ion-icon>
-    <ion-icon name="logo-bitcoin"></ion-icon>
-    <ion-icon name="logo-youtube"></ion-icon>
-    <ion-icon name="logo-instagram"></ion-icon>
-    <ion-icon name="logo-windows"></ion-icon>
-    
-
-    <img src="/assets/icons/fb-logo.svg" alt="">
-    <img src="/assets/icons/logo-youtube.svg" alt=""> -->
+  <form data-multi-step class="multi-step-form">
 
 
-    <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/Facebook_icon_2013.svg.png"
-                alt=""></a></li>
-    <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/icons8-instagram-24.png" alt=""></a>
-    </li>
-    <li><a class="social-link" href="#"><img class="social-icon" src="/assets/icons/logo-youtube.svg" alt=""></a></li>
+    <div class="card" data-step>
 
-<img class='social-link'src="/assets/icons/icons8-instagram-48.png" alt="">
-<img src="/assets/icons/logo-youtube.svg" alt="">
+      <h3 class="step-title">1. Billing Information</h3>
 
-    <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
-    <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
+      <form action="success.html" method="GET">
+
+        <div class="form-group">
+          <label>Email:</label>
+          <input type="email" class="textInput" id="signup__email" name="email" />
+        </div>
+
+        <div class="form-group">
+          <label for="first-name-id">First Name:</label>
+          <input type="text" class="textInput" id="first-name-id" name="first-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Last Name:</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Address</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Post Code</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Suburb/City</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">State/Territory</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Phone Number</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        </div>
+
+        <button type="button" data-next>Next</button>
+
+
+    </div>
+
+
+    <div class="card" data-step>
+      <h3 class="step-title">2. Shipping Method</h3>
+      <fieldset>
+        <div>
+          <input type="radio" id="methodChoice1" name="delivery" value="billing-address">
+          <label for="methodChoice1">Billing Address</label><br>
+
+          <input type="radio" id="methodChoice2" name="delivery" value="different-address">
+          <label for="methodChoice2">Different Address</label><br>
+
+          <input type="radio" id="methodChoice3" name="delivery" value="multiple-addresses">
+          <label for="methodChoice3">Multiple Addressess</label><br>
+        </div>
+      </fieldset>
+
+      <div>
+        <label for="signature-required">Signature not required on delivery</label>
+        <input type="checkbox" />
+      </div>
+
+      <button type="button" data-previous>Previous</button>
+      <button type="button" data-next>Next</button>
+
+    </div>
+
+    <div class="card" data-step>
+
+      <h3 class="step-title">3. Payment Information</h3>
+
+      <div class="form-group">
+        <label>Card Number:</label>
+        <input type="text" class="textInput" id="signup__email" name="email" />
+      </div>
+
+      <div class="form-group">
+        <label for="first-name-id"> Expiration Date:</label>
+        <input type="text" class="textInput" id="first-name-id" name="first-name" />
+      </div>
+
+      <div class="form-group">
+        <label for="last-name-id">CVV:</label>
+        <input type="text" class="textInput" id="last-name-id" name="last-name" />
+      </div>
+
+      <div class="form-group">
+        <label for="last-name-id">Postal Code</label>
+        <input type="text" class="textInput" id="last-name-id" name="last-name" />
+      </div>
+
+      <button type="button" data-previous>Previous</button>
+      <button type="button" data-next>Confirm and Process Order</button>
+
+    </div>
+
+
+    <div class="card" data-step>
+
+      <h3 class="step-title">Order Confirmation</h3>
+
+      <section>
+        <p>
+          Your order has been received
+          <a href="mailto:orders@example.com">orders@example.com</a>.
+
+        </p>
+        <a href="/main/index.html" class="button button-accent">To Homepage</a>
+
+        <!-- <button type="button" data-next>Back to Homepage</button> -->
+      </section>
+
+    </div>
+
+
+
 
 </body>
 
