Linked a rough flow of pages together

--- a/main/index.html
+++ b/main/index.html
@@ -64,7 +64,7 @@
             <figcaption class="album-desc">
                 <h1>Tassels</h1>
                 <p> by Mt Mountain</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -75,7 +75,7 @@
             <figcaption class="album-desc">
                 <h1>The Girl the Cat and The Tree</h1>
                 <p> by Lausse the Cat</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">Link</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -86,7 +86,7 @@
             <figcaption class="album-desc">
                 <h1>ADAPT TO SELF-INFLICTED CHEMICAL TORTURE</h1>
                 <p> by SELF HARM</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -97,7 +97,7 @@
             <figcaption class="album-desc">
                 <h1>Born Like This</h1>
                 <p> by DOOM</p>
-                <a href="indv-prod-pg" class="button button-accent button-small">View</a>
+                <a href="indv-prod-pg" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -108,7 +108,7 @@
             <figcaption class="album-desc">
                 <h1>Snoopy</h1>
                 <p>by CS & Kreme</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
@@ -119,7 +119,7 @@
             <figcaption class="album-desc">
                 <h1>James is Going to Die soon </h1>
                 <p>by Crywank</p>
-                <a href="indv-prod-pg.html" class="button button-accent button-small">View</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
     </section>
