--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -129,7 +129,10 @@
             <strong class="cart-total-title">Total</strong>
             <span class="cart-total-price">$0</span>
         </div>
-        <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button>
+        <!-- <button class="btn btn-primary btn-purchase" type="button">PURCHASE</button> -->
+       
+        <a class="btn btn-primary btn-purchase" href="/main/checkout-flow.html">PURCHASE</a>
+ 
     </section>
 
 
