--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -62,7 +62,7 @@
                     <option> CD </option>
                 </select>
                 <input type="number" value="1">
-                <a href="#" class="btn-secondary btn-secondary-accent"> Add to Cart</a>
+                <a href="/main/shopping-cart.html" class="btn-secondary btn-secondary-accent"> Add to Cart</a>
                 <h3>Product Details<i class=fa fa-indent></i></h3>
                 <br>
                 <p>Ross From Friends – Aphelion EP
