--- a/main/superseded html/checkout-flow copy.html
+++ b/main/superseded html/checkout-flow copy.html
@@ -6,7 +6,8 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Document</title>
-  <link rel="stylesheet" href="/css/test.css">
+  <!-- <link rel="stylesheet" href="/css/test.css"> -->
+  <link rel="stylesheet" href="/css/style.css">
   <script src="/js/script.js" defer></script>
 </head>
 
@@ -137,8 +138,6 @@
       </section>
 
     </div>
-
-
 
 
 </body>
