--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -8,7 +8,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Oz Music Online Redesign</title>
+    <title>Product Page</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
 
@@ -27,6 +27,8 @@
             <li><a href="/main/search-page.html">Shop</a></li>
             <li><a href="">Contact</a></li>
             <li><a href=""><ion-icon name="cart-outline"></ion-icon></a></li>
+            <li><a href=""><ion-icon name="person-outline"></ion-icon></ion-icon></a></li>
+            
         </ul>
     </nav>
     <label for="nav-toggle" class="nav-toggle-label">
