--- a/main/checkout-flow.html
+++ b/main/checkout-flow.html
@@ -7,7 +7,9 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Start</title>
   <!-- <link rel="stylesheet" href="/css/test.css"> -->
+  <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
+
   <script src="/js/script.js" defer></script>
 </head>
 
