--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -11,6 +11,7 @@
     <title>Product Page</title>
     <link rel="stylesheet" href="../css/reset.css">
     <link rel="stylesheet" href="../css/style.css">
+    
 
 </head>
 
@@ -46,11 +47,30 @@
                 <div class="small-img-row">
 
                     <div class="small-img-col">
+                        <img src="/assets/images/rff-aphelion-product-spread-01.jpg" width="100%" class="small-img">
+                    </div>
+
+
+                    <div class="small-img-col">
                         <img src="/assets/images/rff-aphelion-product-spread-02.jpg" width="100%" class="small-img">
                     </div>
+
                     <div class="small-img-col">
                         <img src="/assets/images/rff-aphelion-product-spread-03.jpg" width="100%" class="small-img">
                     </div>
+
+                    <div class="small-img-col">
+                        <img src="/assets/images/rff-aphelion-product-spread-04.jpg" width="100%" class="small-img">
+                    </div>
+
+                    <div class="small-img-col">
+                        <img src="/assets/images/rff-aphelion-product-spread-05.jpg" width="100%" class="small-img">
+                    </div>
+
+                    <div class="small-img-col">
+                        <img src="/assets/images/rff-aphelion-product-spread-06.jpg" width="100%" class="small-img">
+                    </div>
+
 
                 </div>
             </div>
@@ -157,14 +177,37 @@
     <script>
 
         var ProductImg = document.getElementById("ProductImg");
-        var SmallImg = document.getElementsByClassName("small-img");
+        var smallImg = document.getElementsByClassName("small-img");
 
-        SmallImg[0].onclick = function () {
-            ProductImg.src = SmallImg[0].src;
+        smallImg[0].onclick = function () {
+            ProductImg.src = smallImg[0].src;
         }
-        SmallImg[1].onclick = function () {
-            ProductImg.src = SmallImg[1].src;
+
+        smallImg[1].onclick = function () {
+            ProductImg.src = smallImg[1].src;
         }
+
+        smallImg[2].onclick = function () {
+            ProductImg.src = smallImg[2].src;
+        }
+
+        smallImg[3].onclick = function () {
+            ProductImg.src = smallImg[3].src;
+        }
+
+        smallImg[4].onclick = function () {
+            ProductImg.src = smallImg[4].src;
+        }
+
+        smallImg[5].onclick = function () {
+            ProductImg.src = smallImg[5].src;
+        }
+
+        smallImg[6].onclick = function () {
+            ProductImg.src = smallImg[6].src;
+        }
+
+
 
     </script>
 
