--- a/main/checkout.html
+++ b/main/checkout.html
@@ -10,7 +10,7 @@
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
 
-  <script src="/js/script.js" defer></script>
+  <script src="/js/checkout.js" defer></script>
 </head>
 
 <body>
@@ -138,16 +138,11 @@
         <p>
           Thank you. Your order has been received.
 
-
-          <!-- <a href="mailto:orders@example.com">ozmus@bigpond.net.au</a>. -->
-
         </p>
 
         <ion-icon class="confirmation-check" name="checkmark-circle-outline"></ion-icon>
 
         <a href="/main/index.html" class="btn-secondary btn-secondary-accent">To Homepage</a>
-
-        <!-- <button type="button" data-next>Back to Homepage</button> -->
       </section>
 
     </div>
