--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -96,7 +96,7 @@
                     Genre: Electronic
                     Style: House, Deep House, Lo-Fi, Tech House
                 </p>
-                <div>
+                <div id="trackInfo">
                     <h1>Tracklist</h1>
                     <ul>
                         <li>A1 Don't Wake Dad    6:54</li>
@@ -113,7 +113,6 @@
 
 </section>
 
-
     <footer>
         <div class="container">
             <div class="col-3">
@@ -121,22 +120,7 @@
                     Memorabilia.We
                     offer
                     a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's.
-                    <!-- Genres include:
-                    Rock
-                    - Pop - Soul - Funk - Dance - Alternative - Indie - Metal - Punk - Psych - Progressive - Jazz - Beat
-                    -
-                    Power Pop - Audiophile - Blues - Folk - Reggae - Garage - Country & Western - Classical - World -
-                    Soundtracks.
-                    Our music memorabilia section includes sheet music, tour programs, concert tickets, posters, books,
-                    magazines, and promotional items. -->
-                </p>
-                <!-- <p>We have a large network of contacts and sources of supply, plus many unlisted items. So if you don't find
-                it here, please Send your Want List
-                <strong> BUY QUALITY RECORD COLLECTIONS.</strong> Please Contact us
-                We hope that you will enjoy your visit to our site and that you will return regularly to view our ever
-                changing stock. Thank you. -->
-
-                </p>
+                
             </div>
 
 
@@ -145,8 +129,6 @@
                     <li><strong>About Us</strong></li>
                     <li>Our Blog</li>
                     <li>Contact Us</li>
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
                 </ul>
             </div>
 
@@ -168,7 +150,6 @@
                         Castle Hill NSW 2154</li>
                     <li>Phone : (+612) 9634 6741</li>
                     <li>Email : ozmus@bigpond.net.au</li>
-                    <li>Placeholder</li>
                 </ul>
             </div>
         </div>
@@ -203,9 +184,7 @@
             ProductImg.src = smallImg[5].src;
         }
 
-        smallImg[6].onclick = function () {
-            ProductImg.src = smallImg[6].src;
-        }
+      
 
 
 
