--- a/main/index.html
+++ b/main/index.html
@@ -147,31 +147,13 @@
     </section> -->
 
     <footer>
-        <div class="footer-container">
+        <div class="container">
             <div class="col-3">
-                <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music Memorabilia.We
+                <p>Specialist dealer in Rare and Collectable Vinyl Records, Out Of Print CD's and Music
+                    Memorabilia.We
                     offer
                     a large selection of items from the 1950's 1960's 1970's 1980's 1990's and 2000's.
-                    <!-- Genres include:
-                    Rock
-                    - Pop - Soul - Funk - Dance - Alternative - Indie - Metal - Punk - Psych - Progressive - Jazz - Beat
-                    -
-                    Power Pop - Audiophile - Blues - Folk - Reggae - Garage - Country & Western - Classical - World -
-                    Soundtracks.
-                    Our music memorabilia section includes sheet music, tour programs, concert tickets, posters, books,
-                    magazines, and promotional items. -->
-                </p>
-                <!-- <p>We have a large network of contacts and sources of supply, plus many unlisted items. So if you don't find
-                it here, please Send your Want List
-                <strong> BUY QUALITY RECORD COLLECTIONS.</strong> Please Contact us
-                We hope that you will enjoy your visit to our site and that you will return regularly to view our ever
-                changing stock. Thank you. -->
-                <a class="#" href="#"><img class="social-icon" src="/assets/icons/icons8-facebook-24.png" alt=""></a>
-                <a href="#"><img class="social-icon" src="/assets/icons/icons8-instagram-24.png" alt=""></a>
-                <a href="#"><img class="social-icon" src="/assets/icons/icons8-twitter-24.png" alt=""></a>
-                <a href="#"><img class="social-icon" src="/assets/icons/icons8-mail-30.png" alt=""></a>
-
-                </p>
+                
             </div>
 
 
@@ -180,8 +162,6 @@
                     <li><strong>About Us</strong></li>
                     <li>Our Blog</li>
                     <li>Contact Us</li>
-                    <li>Placeholder</li>
-                    <li>Placeholder</li>
                 </ul>
             </div>
 
@@ -203,11 +183,11 @@
                         Castle Hill NSW 2154</li>
                     <li>Phone : (+612) 9634 6741</li>
                     <li>Email : ozmus@bigpond.net.au</li>
-                    <li>Placeholder</li>
                 </ul>
             </div>
         </div>
     </footer>
+
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
