--- a/main/checkout.html
+++ b/main/checkout.html
@@ -6,7 +6,6 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Checkout Start</title>
-  <!-- <link rel="stylesheet" href="/css/test.css"> -->
   <link rel="stylesheet" href="/css/reset.css">
   <link rel="stylesheet" href="/css/style.css">
 
@@ -14,14 +13,51 @@
 </head>
 
 <body>
+
   <form data-multi-step class="multi-step-form">
-
-
     <div class="checkout-card" data-step>
-
       <h3 class="step-title">1. Billing Information</h3>
-
       <form action="success.html" method="GET">
+
+        <!-- <div class="form-group">
+          <label>Email:</label>
+          <input type="email" class="textInput" id="signup__email" name="email" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="first-name-id">First Name:</label>
+          <input type="text" class="textInput" id="first-name-id" name="first-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Last Name:</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Address</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Post Code</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Suburb/City</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">State/Territory</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div>
+
+        <div class="form-group">
+          <label for="last-name-id">Phone Number</label>
+          <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
+        </div> -->
 
         <div class="form-group">
           <label>Email:</label>
@@ -62,46 +98,31 @@
           <label for="last-name-id">Phone Number</label>
           <input type="text" class="textInput" id="last-name-id" name="last-name" />
         </div>
-
         <button class='btn-secondary btn-secondary-accent' type="button" data-next>Next</button>
-
-
     </div>
-
 
     <div class="checkout-card" data-step>
       <h3 class="step-title">2. Shipping Method</h3>
-
-
       <fieldset class="shipping-method-radios">
-
         <div>
           <input type="radio" id="methodChoice1" name="delivery" value="billing-address">
           <label for="methodChoice1">Standard Shipping</label><br>
-
           <input type="radio" id="methodChoice2" name="delivery" value="different-address">
-
-
           <label for="methodChoice2">Express Shipping</label><br>
-
           <input type="radio" id="methodChoice3" name="delivery" value="multiple-addresses">
           <label for="methodChoice3">Pickup</label><br>
         </div>
 
       </fieldset>
-
       <div class='container-signature-radio'>
         <label for="signature-required">Signature not required on delivery</label>
         <input type="checkbox" />
       </div>
-
       <button class='btn-primary btn-primary-accent' type="button" data-previous>Previous</button>
       <button class='btn-secondary btn-secondary-accent' type="button" data-next>Next</button>
-
     </div>
 
     <div class="checkout-card" data-step>
-
       <h3 class="step-title">3. Payment Information</h3>
 
       <div class="form-group">
@@ -126,31 +147,21 @@
 
       <button class='btn-primary btn-primary-accent' type="button" data-previous>Previous</button>
       <button class='btn-secondary btn-secondary-accent' type="button" data-next>Confirm and Process Order</button>
-
     </div>
 
-
     <div class="checkout-card" data-step>
-
       <h3 class="step-title"></h3>
-
       <section>
         <p>
           Thank you. Your order has been received.
-
         </p>
-
         <ion-icon class="confirmation-check" name="checkmark-circle-outline"></ion-icon>
-
         <a href="/main/index.html" class="btn-secondary btn-secondary-accent">To Homepage</a>
       </section>
-
     </div>
 
     <script type="module" src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.esm.js"></script>
     <script nomodule src="https://unpkg.com/ionicons@5.5.2/dist/ionicons/ionicons.js"></script>
 
-
 </body>
-
 </html>
