--- a/main/checkout.html
+++ b/main/checkout.html
@@ -19,7 +19,7 @@
       <h3 class="step-title">1. Billing Information</h3>
       <form action="success.html" method="GET">
 
-        <!-- <div class="form-group">
+        <div class="form-group">
           <label>Email:</label>
           <input type="email" class="textInput" id="signup__email" name="email" required/>
         </div>
@@ -57,47 +57,8 @@
         <div class="form-group">
           <label for="last-name-id">Phone Number</label>
           <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
-        </div> -->
-
-        <div class="form-group">
-          <label>Email:</label>
-          <input type="email" class="textInput" id="signup__email" name="email" />
         </div>
 
-        <div class="form-group">
-          <label for="first-name-id">First Name:</label>
-          <input type="text" class="textInput" id="first-name-id" name="first-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">Last Name:</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">Address</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">Post Code</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">Suburb/City</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">State/Territory</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
-
-        <div class="form-group">
-          <label for="last-name-id">Phone Number</label>
-          <input type="text" class="textInput" id="last-name-id" name="last-name" />
-        </div>
         <button class='btn-secondary btn-secondary-accent' type="button" data-next>Next</button>
     </div>
 
@@ -105,11 +66,11 @@
       <h3 class="step-title">2. Shipping Method</h3>
       <fieldset class="shipping-method-radios">
         <div>
-          <input type="radio" id="methodChoice1" name="delivery" value="billing-address">
+          <input type="radio" id="methodChoice1" name="delivery" value="billing-address" required>
           <label for="methodChoice1">Standard Shipping</label><br>
-          <input type="radio" id="methodChoice2" name="delivery" value="different-address">
+          <input type="radio" id="methodChoice2" name="delivery" value="different-address" required>
           <label for="methodChoice2">Express Shipping</label><br>
-          <input type="radio" id="methodChoice3" name="delivery" value="multiple-addresses">
+          <input type="radio" id="methodChoice3" name="delivery" value="multiple-addresses" required>
           <label for="methodChoice3">Pickup</label><br>
         </div>
 
@@ -127,22 +88,22 @@
 
       <div class="form-group">
         <label>Card Number:</label>
-        <input type="text" class="textInput" id="signup__email" name="email" />
+        <input type="text" class="textInput" id="signup__email" name="" required/>
       </div>
 
       <div class="form-group">
         <label for="first-name-id"> Expiration Date:</label>
-        <input type="text" class="textInput" id="first-name-id" name="first-name" />
+        <input type="text" class="textInput" id="first-name-id" name="first-name" required/>
       </div>
 
       <div class="form-group">
         <label for="last-name-id">CVV:</label>
-        <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
       </div>
 
       <div class="form-group">
         <label for="last-name-id">Postal Code</label>
-        <input type="text" class="textInput" id="last-name-id" name="last-name" />
+        <input type="text" class="textInput" id="last-name-id" name="last-name" required/>
       </div>
 
       <button class='btn-primary btn-primary-accent' type="button" data-previous>Previous</button>
