Removed extraneous files

--- a/main/index.html
+++ b/main/index.html
@@ -94,7 +94,7 @@
             <figcaption class="album-desc">
                 <h1>Born Like This</h1>
                 <p> by DOOM</p>
-                <a href="indv-prod-pg" class="button button-accent button-small">View Album</a>
+                <a href="indv-prod-pg.html" class="button button-accent button-small">View Album</a>
             </figcaption>
         </figure>
 
