Moved index folder to root for publishing

--- a/main/checkout.html
+++ b/main/checkout.html
@@ -117,7 +117,7 @@
           Thank you. Your order has been received.
         </p>
         <ion-icon class="confirmation-check" name="checkmark-circle-outline"></ion-icon>
-        <a href="/main/index.html" class="btn-secondary btn-secondary-accent">To Homepage</a>
+        <a href="/index.html" class="btn-secondary btn-secondary-accent">To Homepage</a>
       </section>
     </div>
 
