--- a/main/indv-prod-pg.html
+++ b/main/indv-prod-pg.html
@@ -16,13 +16,13 @@
 
 <header class="header">
     <h1 class="logo">
-        <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+        <a href="/index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
     </h1>
     <input type="checkbox" id="nav-toggle" class="nav-toggle">
 
     <nav class="nav">
         <ul>
-            <li><a href="/main/index.html">Home</a></li>
+            <li><a href="/index.html">Home</a></li>
             <li><a href="">About</a></li>
             <li><a href="/main/search-page.html">Shop</a></li>
             <li><a href="">Contact</a></li>
