--- a/main/shopping-cart.html
+++ b/main/shopping-cart.html
@@ -15,31 +15,33 @@
 </head>
 
 <body>
-
-    <header class="header">
-        <h1 class="logo">
-            <a href="index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
-        </h1>
-
-        <nav class="nav">
-            <ul>
-                <li><a href="/main/index.html">Home</a></li>
-                <li><a href="">About</a></li>
-                <li><a href="/main/search-page.html">Shop</a></li>
-                <li><a href="">Contact</a></li>
-                <li><a href="">
-                        <ion-icon name="cart-outline"></ion-icon>
-                    </a></li>
-                <li><a href="">
-                        <ion-icon name="person-outline"></ion-icon>
-                        </ion-icon>
-                    </a></li>
-            </ul>
-        </nav>
-        <label for="nav-toggle" class="nav-toggle-label">
-            <span></span>
-        </label>
-    </header>
+    <body>
+        <header class="header">
+            <h1 class="logo">
+                <a href="/index.html"><img src="/assets/icons/oz_music_logo.png" alt=""></a>
+            </h1>
+            <input type="checkbox" id="nav-toggle" class="nav-toggle">
+    
+            <nav class="nav">
+                <ul>
+                    <li><a href="/index.html">Home</a></li>
+                    <li><a href="">About</a></li>
+                    <li><a href="/main/search-page.html">Shop</a></li>
+                    <li><a href="">Contact</a></li>
+                    <li><a href="">
+                            <ion-icon name="cart-outline"></ion-icon>
+                        </a></li>
+                    <li><a href="">
+                            <ion-icon name="person-outline"></ion-icon>
+                            </ion-icon>
+                        </a></li>
+    
+                </ul>
+            </nav>
+            <label for="nav-toggle" class="nav-toggle-label">
+                <span></span>
+            </label>
+        </header>
 
     <section class="container content-section">
         <div class="shop-items">
