--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         </h1>
         <nav class="nav">
             <ul>
-                <li><a href="/main/index.html">Home</a></li>
+                <li><a href="/index.html">Home</a></li>
                 <li><a href="">About</a></li>
                 <li><a href="/main/search-page.html">Shop</a></li>
                 <li><a href="">Contact</a></li>
